<resources>
    <string name="app_name">OddsGame</string>

    <string name="facebook_application_id" translatable="false">276450842836312</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb276450842836312</string>
    <string name="user_guide">User Guide</string>
    <string name="logout">Logout</string>
    <string name="past_games">Past Games</string>
    <string name="requests">Requests</string>
    <string name="new_game">New Game</string>
    <string name="lock_in">Lock In</string>
    <string name="reverse">Reverse</string>
    <string name="start_game">Start Game</string>
    <string name="message">Message</string>
    <string name="odds">Odds</string>
    <string name="choose_an_opponent">Choose an opponent</string>
    <string name="odds_of_to">Odds of %1$d to…</string>
    <string name="locked_in">Locked in!</string>
    <string name="choosing_a_number">Choosing a number…</string>
    <string name="loser">Loser…</string>
    <string name="winner">Winner!</string>
    <string name="no_winner">No winner</string>
    <string name="please_select_an_opponent">Please select an opponent</string>
    <string name="odds_of_to_msg">Odds of %1$d to %2$s</string>
    <string name="please_provide_a_message">Please provide a message</string>
</resources>
