<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_new_game"
            android:icon="@drawable/ic_add_box_black_24dp"
            android:title="@string/new_game" />
        <item
            android:id="@+id/menu_requests"
            android:icon="@drawable/ic_move_to_inbox_black_24dp"
            android:title="@string/requests" />
        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/past_games" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/logout" />
        <item
            android:id="@+id/menu_user_guide"
            android:icon="@drawable/ic_live_help_black_24dp"
            android:title="@string/user_guide" />
    </group>
</menu>